<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/car"
        android:paddingBottom="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_car"
            android:layout_marginEnd="50dp"
            android:layout_gravity="bottom|center"
            android:contentDescription="loading" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_gravity="bottom|center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/white">
            <ImageView
                android:id="@+id/car_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_car"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/car_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:paddingTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/car_icon" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/car_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/car_description"
                android:textSize="15sp"
                android:textColor="@color/black_transparent"
                app:layout_constraintTop_toBottomOf="@id/car_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:paddingTop="20dp"
                android:paddingLeft="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/car_plate_number"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@drawable/left_border"
                android:text="@string/car_plate_number"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_description"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="20dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:textSize="15sp"
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/car_plate_number"
                android:paddingBottom="20dp"
                android:paddingLeft="120dp"
                android:paddingRight="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="220dp"
            android:background="@color/white">
            <ImageView
                android:id="@+id/car_icon2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_car"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/car_model2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:paddingTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/car_icon2" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/car_description2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/car_description"
                android:textSize="15sp"
                android:textColor="@color/black_transparent"
                app:layout_constraintTop_toBottomOf="@id/car_icon2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:paddingTop="20dp"
                android:paddingLeft="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/car_plate_number2"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@drawable/left_border"
                android:text="@string/car_plate_number"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_description2"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="20dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/select2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:textSize="15sp"
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/car_plate_number2"
                android:paddingBottom="20dp"
                android:paddingLeft="120dp"
                android:paddingRight="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="600dp"
            android:background="@color/red"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/system_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/httpErrorBadUrl"
                android:textSize="15sp"
                android:textColor="@color/white"
                />



        </androidx.appcompat.widget.LinearLayoutCompat>

        <include
            layout="@layout/my_text_view"/>


    </FrameLayout>
</ScrollView>


